# promptgit

./: README.md  cloudbuild.yaml  pyproject.toml
docs/: promptgit.md
promptgit/: __init__.py  prompt.py  repo.py
test/: test_location.py  test_prompt.py  test_remote.py  test_repo.py
