[project]
name = "promptgit"
version = "0.2.5"
description = "Managing prompts for LLM in Git repository"
readme = "README.md"
requires-python = ">=3.9,<3.14"
maintainers = [
  {name = "Boris Tvaroska", email = "boris@tvaroska.sk"}
]
dependencies = [
    "gitpython>=3.0.0,<4.0.0",
    "mistletoe>=1.4.0,<2.0.0",
    "pydantic>=2.5.2,<3.0",
    "pyyaml>=6.0.0",
    "urllib3>=2.2.2,<3.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0,<0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "tox>=4.27.0",
]
